cleanup format pom.xml

--- a/graphdb/pom.xml
+++ b/graphdb/pom.xml
@@ -89,7 +89,8 @@
             <exclusions>
                 <exclusion>
                     <groupId>commons-collections</groupId>
-                    <artifactId>commons-collections</artifactId>                </exclusion>
+                    <artifactId>commons-collections</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
