--- a/jmh-tests/pom.xml
+++ b/jmh-tests/pom.xml
@@ -30,7 +30,7 @@ questions.
     <parent>
         <artifactId>orientdb-parent</artifactId>
         <groupId>com.orientechnologies</groupId>
-        <version>2.1.9-SNAPSHOT</version>
+        <version>2.1.9</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
