added assignee on support team for private issues

--- a/orientechnologies-website/src/main/resources/app-development.properties
+++ b/orientechnologies-website/src/main/resources/app-development.properties
@@ -3,3 +3,4 @@ connection.url= plocal:databases/odbsite
 connection.usr = admin
 connection.pwd = LadmhNv5twcn
 escalate.mail = info@orientdb.com
+escalate.mailcc = info@orientdb.com
