--- a/orientechnologies-website/src/main/resources/app-production.properties
+++ b/orientechnologies-website/src/main/resources/app-production.properties
@@ -2,4 +2,5 @@ app.endpoint = http://www.prjhub.com
 connection.url= plocal:databases/odbsite
 connection.usr = admin
 connection.pwd = LadmhNv5twcn
-escalate.mail = info@orientdb.com
+escalate.mail = support@orientdb.com
+escalate.mailcc = info@orientdb.com
