--- a/orientechnologies-website/src/main/resources/app-test.properties
+++ b/orientechnologies-website/src/main/resources/app-test.properties
@@ -3,3 +3,4 @@ connection.url= memory:odbsite
 connection.usr = admin
 connection.pwd = admin
 escalate.mail = info@orientdb.com
+escalate.mailcc = info@orientdb.com
