--- a/pom.xml
+++ b/pom.xml
@@ -113,8 +113,8 @@
         <module>distributed</module>
         <module>graphdb</module>
         <module>lucene</module>
-        <module>etl</module>
         <module>jdbc</module>
+        <module>etl</module>
         <module>distribution</module>
     </modules>
 
@@ -183,7 +183,7 @@
         <osgi.dynamicImport/>
         <osgi.private/>
         <!-- | shared build/report plugins version -->
-        <surefire.version>2.17</surefire.version>
+        <surefire.version>2.19.1</surefire.version>
         <sonatypeOssDistMgmtSnapshotsUrl>https://oss.sonatype.org/content/repositories/snapshots/
         </sonatypeOssDistMgmtSnapshotsUrl>
     </properties>
@@ -260,10 +260,17 @@
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-source-plugin</artifactId>
-                    <version>2.4</version>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.8</version>
                 </plugin>
-                <!-- | This plugin's configuration is used to store Eclipse 
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-pmd-plugin</artifactId>
+                    <version>2.6</version>
+                </plugin>
+
+                <!-- | This plugin's configuration is used to store Eclipse
                     | m2e settings only. It has no influence on the Maven build itself. -->
                 <plugin>
                     <groupId>org.eclipse.m2e</groupId>
