--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.0.17-SNAPSHOT</version>
+        <version>2.0.18</version>
         <relativePath>../</relativePath>
     </parent>
 
