--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,7 +27,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.0.17-SNAPSHOT</version>
+        <version>2.0.18</version>
     </parent>
 
     <artifactId>orientdb-server</artifactId>
