--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>com.orientechnologies</groupId>
     <artifactId>orientdb-parent</artifactId>
-    <version>2.0.18</version>
+    <version>2.0.19-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>OrientDB</name>
