--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
   - mvn install dependency:go-offline -Pskip-formatter -DskipTests=true -q -f driver/pom.xml
 
 script:
-  - mvn install -P travis -B -f driver/pom.xml
+  - mvn install -P travis -B -f driver/pom.xml -Dfailsafe.timeout=0
   - cd tests-scala ; sbt test
