moved incremental backup in the agent

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -137,5 +137,11 @@
             <artifactId>orientdb-tools</artifactId>
             <version>${orientdb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-test-commons</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
