--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,12 @@
                     <version>${surefire.version}</version>
 
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${surefire.version}</version>
+
+                </plugin>
 
                 <plugin>
                     <artifactId>maven-install-plugin</artifactId>
@@ -346,10 +352,16 @@
 
                     <configuration>
                         <licenseMerges>
-                            <licenseMerge>ASL 2.0|Apache License 2.0|Apache License, Version 2.0|Apache 2|ASL, version 2|The Apache Software License|Version 2.0,Apache License, Version 2.0| The Apache Software License, Version 2.0</licenseMerge>
+                            <licenseMerge>ASL 2.0|Apache License 2.0|Apache License, Version 2.0|Apache 2|ASL, version 2|The Apache
+                                Software License|Version 2.0,Apache License, Version 2.0| The Apache Software License, Version 2.0
+                            </licenseMerge>
                             <licenseMerge>BSD|BSD License|New BSD License</licenseMerge>
-                            <licenseMerge>LGPL 2.1|GNU Lesser General Public License (LGPL), Version 2.1|GNU Lesser General Public License, Version 2.1</licenseMerge>
-                            <licenseMerge>CDDL 1.0|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0|Common Development and Distribution License (CDDL) v1.0</licenseMerge>
+                            <licenseMerge>LGPL 2.1|GNU Lesser General Public License (LGPL), Version 2.1|GNU Lesser General Public
+                                License, Version 2.1
+                            </licenseMerge>
+                            <licenseMerge>CDDL 1.0|COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) Version 1.0|Common Development
+                                and Distribution License (CDDL) v1.0
+                            </licenseMerge>
                             <licenseMerge>LGPL 3|GNU LESSER GENERAL PUBLIC LICENSE|GNU Lesser Public License</licenseMerge>
                         </licenseMerges>
                     </configuration>
@@ -395,7 +407,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <systemPropertyVariables>
-			<security.userPasswordSaltIterations>1</security.userPasswordSaltIterations>
+                        <security.userPasswordSaltIterations>1</security.userPasswordSaltIterations>
                     </systemPropertyVariables>
                 </configuration>
             </plugin>
