--- a/pom.xml
+++ b/pom.xml
@@ -211,9 +211,19 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${surefire.version}</version>
+                    <configuration>
+                        <systemPropertyVariables>
+                            <security.userPasswordSaltIterations>1</security.userPasswordSaltIterations>
+                        </systemPropertyVariables>
+                    </configuration>
 
                 </plugin>
+
+
+
                 <plugin>
+
+
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
                     <version>${surefire.version}</version>
@@ -402,15 +412,6 @@
                 </configuration>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <systemPropertyVariables>
-                        <security.userPasswordSaltIterations>1</security.userPasswordSaltIterations>
-                    </systemPropertyVariables>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.felix</groupId>
@@ -484,6 +485,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
