Revert "Bump gremlin version to 3.1.1"
This reverts commit 9f395db29264cdb6b2ada72e7659b27cb9155db8.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ install:
   - mvn install dependency:go-offline -Pskip-formatter -DskipTests=true -q -f driver/pom.xml
 
 script:
-  - mvn install -P travis -B -f driver/pom.xml -Dfailsafe.timeout=0
+  - mvn install -P travis -B -f driver/pom.xml
   - cd tests-scala ; sbt test
