--- a/client/pom.xml
+++ b/client/pom.xml
@@ -45,7 +45,7 @@
     <dependencies>
         <dependency>
             <groupId>com.orientechnologies</groupId>
-            <artifactId>orientdb-enterprise</artifactId>
+            <artifactId>orientdb-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
