--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.orientechnologies</groupId>
     <artifactId>agent</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0-beta</version>
     <packaging>jar</packaging>
 
     <name>agent</name>
