Making sure we check javadoc "quality" when accepting patches

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,4 +13,4 @@ install:
   
 
 build_script:
-  - mvn clean install -P travis -B -f driver/pom.xml -Dfailsafe.timeout=0
+  - mvn clean install -P travis,release -B -f driver/pom.xml -Dfailsafe.timeout=0
