--- a/enterprise/pom.xml
+++ b/enterprise/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.1.12-SNAPSHOT</version>
+        <version>2.1.12</version>
         <relativePath>../</relativePath>
     </parent>
 
