Distributed: introduced 'majority' and 'all' in both quorums and removed failureAvailableNodesLessQuorum

--- a/distributed/config/default-distributed-db-config.json
+++ b/distributed/config/default-distributed-db-config.json
@@ -3,8 +3,7 @@
   "hotAlignment": false,
   "executionMode": "undefined",
   "readQuorum": 1,
-  "writeQuorum": 2,
-  "failureAvailableNodesLessQuorum": false,
+  "writeQuorum": "majority",
   "readYourWrites": true,
   "servers": {
     "*": "master"
