--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -60,6 +60,12 @@
             <artifactId>orientdb-object</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
