Updated distributed-cfg file

--- a/agent/config/default-distributed-db-config.json
+++ b/agent/config/default-distributed-db-config.json
@@ -3,16 +3,13 @@
   "hotAlignment": false,
   "executionMode": "undefined",
   "readQuorum": 1,
-  "writeQuorum": 2,
-  "failureAvailableNodesLessQuorum": false,
+  "writeQuorum": "majority",
   "readYourWrites": true,
   "servers": {
     "*": "master"
   },
   "clusters": {
     "internal": {
-    },
-    "index": {
     },
     "*": {
       "servers": [
