--- a/client/pom.xml
+++ b/client/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.0-SNAPSHOT</version>
+        <version>2.2.0-beta2</version>
         <relativePath>../</relativePath>
     </parent>
 
