--- a/distributed/pom.xml
+++ b/distributed/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.1.14</version>
+        <version>2.1.15-SNAPSHOT</version>
     </parent>
 
     <artifactId>orientdb-distributed</artifactId>
