--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -136,6 +136,15 @@
             <artifactId>orientdb-tools</artifactId>
             <version>${orientdb.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.53</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.10.65</version>
+        </dependency>
     </dependencies>
 </project>
