disables test even in CI profile

--- a/distributed/pom.xml
+++ b/distributed/pom.xml
@@ -75,7 +75,7 @@
                 </property>
             </activation>
             <properties>
-                <skipTests>false</skipTests>
+                <skipTests>true</skipTests>
             </properties>
         </profile>
         <profile>
@@ -87,7 +87,7 @@
                 </property>
             </activation>
             <properties>
-                <skipTests>false</skipTests>
+                <skipTests>true</skipTests>
             </properties>
         </profile>
     </profiles>
