disables distributed tests

--- a/distributed/pom.xml
+++ b/distributed/pom.xml
@@ -73,7 +73,7 @@
                 </property>
             </activation>
             <properties>
-                <skipTests>false</skipTests>
+                <skipTests>true</skipTests>
             </properties>
         </profile>
         <profile>
@@ -85,7 +85,7 @@
                 </property>
             </activation>
             <properties>
-                <skipTests>false</skipTests>
+                <skipTests>true</skipTests>
             </properties>
         </profile>
     </profiles>
