Stop OrientDB if -XX:MaxDirectMemorySize is not set #5816

--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -42,6 +42,7 @@
         </osgi.export>
         <jar.manifest.mainclass>com.orientechnologies.orient.console.OConsoleDatabaseApp</jar.manifest.mainclass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <argLine>-XX:MaxDirectMemorySize=512g</argLine>
     </properties>
 
     <dependencies>
