--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -119,12 +119,16 @@
                         <id>build-db</id>
                         <phase>prepare-package</phase>
                         <goals>
-                            <goal>java</goal>
+                            <goal>exec</goal>
                         </goals>
                         <configuration>
-                            <mainClass>com.orientechnologies.orient.graph.console.OInternalGraphImporter</mainClass>
+                            <executable>${java.home}/bin/java</executable>
                             <workingDirectory>${project.basedir}</workingDirectory>
                             <arguments>
+                                <argument>-XX:MaxDirectMemorySize=512g</argument>
+                                <argument>-classpath</argument>
+                                <classpath />
+                                <argument>com.orientechnologies.orient.graph.console.OInternalGraphImporter</argument>
                                 <argument>${project.basedir}/../graphdb/src/test/resources/graph-example-2.xml</argument>
                                 <argument>plocal:${project.basedir}/target/databases/GratefulDeadConcerts</argument>
                             </arguments>
