--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -34,6 +34,10 @@
     <description>JDBC Driver for OrientDB NoSQL document graph dbms</description>
     <inceptionYear>2012</inceptionYear>
 
+    <properties>
+        <argLine>-XX:MaxDirectMemorySize=512g</argLine>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.orientechnologies</groupId>
