--- a/bower.json
+++ b/bower.json
@@ -38,10 +38,14 @@
     "angular-smart-table": " 2.1.5",
     "angular-datatables": "~0.4.3",
     "c3js-chart": "~0.4.10",
-    "angular-ui-select": "~0.13.2",
+    "angular-ui-select": "~0.16.1",
     "selectize": "~0.12.1",
     "noty": "~2.3.7",
-    "filesize": "~3.1.4"
+    "filesize": "~3.1.4",
+    "jquery-cron": "~0.1.4",
+    "angular-cron-jobs": "~1.4.1",
+    "angular-quartz-cron": "~1.0.1",
+    "TimelineJS3": "~3.3.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.5",
