--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>com.orientechnologies</groupId>
         <artifactId>orientdb-parent</artifactId>
-        <version>2.2.0-rc1</version>
+        <version>2.2.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
