started db logger for backup

--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -137,6 +137,11 @@
             <version>${orientdb.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-security</artifactId>
+            <version>${orientdb.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.jcraft</groupId>
             <artifactId>jsch</artifactId>
             <version>0.1.53</version>
