updates jacoco to 0.7.6.201602180812 and deconfigure it to create separate exec files, one for each modules

--- a/pom.xml
+++ b/pom.xml
@@ -494,10 +494,11 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.5.201505241946</version>
+                <!--<version>0.7.5.201505241946</version>-->
+                <version>0.7.6.201602180812</version>
                 <configuration>
-                    <destFile>${project.basedir}/../target/jacoco.exec</destFile>
-                    <dataFile>${project.basedir}/../target/jacoco.exec</dataFile>
+                    <!--<destFile>${project.basedir}/../target/jacoco.exec</destFile>-->
+                    <!--<dataFile>${project.basedir}/../target/jacoco.exec</dataFile>-->
                 </configuration>
             </plugin>
 
