--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,9 @@
     "jquery-cron": "~0.1.4",
     "angular-cron-jobs": "~1.4.1",
     "angular-quartz-cron": "~1.0.1",
-    "TimelineJS3": "~3.3.9"
+    "TimelineJS3": "~3.3.9",
+    "fullcalendar": "~2.7.1",
+    "lodash": "~4.12.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.0.5",
