Issue #6038 OLocalHashTableWAL test was added to test suite.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -75,6 +75,7 @@
                 <exclude.test.5>**/OSBTreeBonsaiLocalTest.java</exclude.test.5>
                 <exclude.test.6>**/LocalPaginatedClusterTest.java</exclude.test.6>
                 <exclude.test.7>**/WOWCacheTest.java</exclude.test.7>
+                <exclude.test.8>**/OLocalHashTableWALTest.java</exclude.test.8>
             </properties>
         </profile>
 
@@ -94,6 +95,7 @@
                 <exclude.test.5>empty.java</exclude.test.5>
                 <exclude.test.6>empty.java</exclude.test.6>
                 <exclude.test.7>empty.java</exclude.test.7>
+                <exclude.test.8>empty.java</exclude.test.8>
             </properties>
 
         </profile>
@@ -113,6 +115,7 @@
                 <exclude.test.5>empty.java</exclude.test.5>
                 <exclude.test.6>empty.java</exclude.test.6>
                 <exclude.test.7>empty.java</exclude.test.7>
+                <exclude.test.8>empty.java</exclude.test.8>
             </properties>
 
         </profile>
@@ -168,6 +171,7 @@
                         <exclude>${exclude.test.5}</exclude>
                         <exclude>${exclude.test.6}</exclude>
                         <exclude>${exclude.test.7}</exclude>
+                        <exclude>${exclude.test.8}</exclude>
                     </excludes>
                 </configuration>
             </plugin>
