Issue #6038 SBTreeWALTest was added to tests suite.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -76,6 +76,7 @@
                 <exclude.test.6>**/LocalPaginatedClusterTest.java</exclude.test.6>
                 <exclude.test.7>**/WOWCacheTest.java</exclude.test.7>
                 <exclude.test.8>**/OLocalHashTableWALTest.java</exclude.test.8>
+                <exclude.test.9>**/SBTreeWALTest.java</exclude.test.9>
             </properties>
         </profile>
 
@@ -96,6 +97,7 @@
                 <exclude.test.6>empty.java</exclude.test.6>
                 <exclude.test.7>empty.java</exclude.test.7>
                 <exclude.test.8>empty.java</exclude.test.8>
+                <exclude.test.9>empty.java</exclude.test.9>
             </properties>
 
         </profile>
@@ -116,6 +118,7 @@
                 <exclude.test.6>empty.java</exclude.test.6>
                 <exclude.test.7>empty.java</exclude.test.7>
                 <exclude.test.8>empty.java</exclude.test.8>
+                <exclude.test.9>empty.java</exclude.test.9>
             </properties>
 
         </profile>
@@ -172,6 +175,7 @@
                         <exclude>${exclude.test.6}</exclude>
                         <exclude>${exclude.test.7}</exclude>
                         <exclude>${exclude.test.8}</exclude>
+                        <exclude>${exclude.test.9}</exclude>
                     </excludes>
                 </configuration>
             </plugin>
