Issue #6038 LocalPaginatedClusterWithWALTest was added into ci test suite.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -77,6 +77,7 @@
                 <exclude.test.7>**/WOWCacheTest.java</exclude.test.7>
                 <exclude.test.8>**/OLocalHashTableWALTest.java</exclude.test.8>
                 <exclude.test.9>**/SBTreeWALTest.java</exclude.test.9>
+                <exclude.test.10>**/LocalPaginatedClusterWithWALTest.java</exclude.test.10>
             </properties>
         </profile>
 
@@ -98,6 +99,7 @@
                 <exclude.test.7>empty.java</exclude.test.7>
                 <exclude.test.8>empty.java</exclude.test.8>
                 <exclude.test.9>empty.java</exclude.test.9>
+                <exclude.test.10>empty.java</exclude.test.10>
             </properties>
 
         </profile>
@@ -119,6 +121,7 @@
                 <exclude.test.7>empty.java</exclude.test.7>
                 <exclude.test.8>empty.java</exclude.test.8>
                 <exclude.test.9>empty.java</exclude.test.9>
+                <exclude.test.10>empty.java</exclude.test.10>
             </properties>
 
         </profile>
@@ -176,6 +179,7 @@
                         <exclude>${exclude.test.7}</exclude>
                         <exclude>${exclude.test.8}</exclude>
                         <exclude>${exclude.test.9}</exclude>
+                        <exclude>${exclude.test.10}</exclude>
                     </excludes>
                 </configuration>
             </plugin>
