Minor: update company name in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,8 @@
     <url>http://www.orientechnologies.com</url>
     <inceptionYear>2009</inceptionYear>
     <organization>
-        <name>Orient Technologies</name>
-        <url>http://www.orientechnologies.com</url>
+        <name>OrientDB</name>
+        <url>http://orientdb.com</url>
     </organization>
     <licenses>
         <license>
