Issue #6038 was fixed.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -78,6 +78,7 @@
                 <exclude.test.8>**/OLocalHashTableWALTest.java</exclude.test.8>
                 <exclude.test.9>**/SBTreeWALTest.java</exclude.test.9>
                 <exclude.test.10>**/LocalPaginatedClusterWithWALTest.java</exclude.test.10>
+                <exclude.test.11>**/OSBTreeBonsaiWALTest.java</exclude.test.11>
             </properties>
         </profile>
 
@@ -100,6 +101,7 @@
                 <exclude.test.8>empty.java</exclude.test.8>
                 <exclude.test.9>empty.java</exclude.test.9>
                 <exclude.test.10>empty.java</exclude.test.10>
+                <exclude.test.11>empty.java</exclude.test.11>
             </properties>
 
         </profile>
@@ -122,6 +124,7 @@
                 <exclude.test.8>empty.java</exclude.test.8>
                 <exclude.test.9>empty.java</exclude.test.9>
                 <exclude.test.10>empty.java</exclude.test.10>
+                <exclude.test.11>empty.java</exclude.test.11>
             </properties>
 
         </profile>
@@ -180,6 +183,7 @@
                         <exclude>${exclude.test.8}</exclude>
                         <exclude>${exclude.test.9}</exclude>
                         <exclude>${exclude.test.10}</exclude>
+                        <exclude>${exclude.test.11}</exclude>
                     </excludes>
                 </configuration>
             </plugin>
