Fixed issue "ODistributedRecordLockedException - The database is not releasing lock till all nodes are restarted"
Issue #http://www.prjhub.com/#/issues/6449.

There is still the chance the lock remains if the remote socket is full.

--- a/distributed/src/test/resources/orientdb-server-log.properties
+++ b/distributed/src/test/resources/orientdb-server-log.properties
@@ -26,13 +26,13 @@ handlers = java.util.logging.ConsoleHandler
 # Set the default logging level for the root logger
 .level = INFO
 com.orientechnologies.level = INFO
-com.orientechnologies.orient.server.distributed.level = INFO
-com.orientechnologies.orient.server.hazelcast.level = INFO
+com.orientechnologies.orient.server.distributed.level = FINE
 
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = FINE
 # Set the default formatter for new ConsoleHandler instances
-java.util.logging.ConsoleHandler.formatter = com.orientechnologies.common.log.OLogFormatter
+java.util.logging.ConsoleHandler.formatter = com.orientechnologies.common.log.OAnsiLogFormatter
+
 # Set the default logging level for new FileHandler instances
 java.util.logging.FileHandler.level = FINE
 # Naming style for the output file
