Distributed: minor fixes

--- a/distributed/src/test/resources/orientdb-server-log.properties
+++ b/distributed/src/test/resources/orientdb-server-log.properties
@@ -26,7 +26,7 @@ handlers = java.util.logging.ConsoleHandler
 # Set the default logging level for the root logger
 .level = INFO
 com.orientechnologies.level = INFO
-com.orientechnologies.orient.server.distributed.level = FINE
+com.orientechnologies.orient.server.distributed.level = INFO
 
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = FINE
