propagation of encryption support to graphFactory
refs : https://github.com/orientechnologies/orientdb/issues/6231

--- a/graphdb/pom.xml
+++ b/graphdb/pom.xml
@@ -90,6 +90,15 @@
             <version>${project.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>com.orientechnologies</groupId>
+            <artifactId>orientdb-core</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
+        </dependency>
+
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
